<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MagNo Market</string>
    <string name="title_mi_cuenta" translatable="false">Mi Cuenta</string>
    <string name="title_lista_de_compra" translatable="false">Lista de Compra</string>
    <string name="title_notificaciones" translatable="false">Notificaciones</string>
    <string name="title_mi_despensa" translatable="false">Mi Despensa</string>
    <string name="prompt_correo" translatable="false">Correo electrónico</string>
    <string name="prompt_contrasena" translatable="false">Contraseña</string>
    <string name="switchSaveCredentials" translatable="false">Guardar las credenciales</string>
    <string name="btnAcceder" translatable="false">Acceder</string>
    <string name="credenciales_incorrectas" translatable="false">Credenciales incorrectas</string>
    <string name="borrarCredenciales" translatable="false">Borrar las credenciales</string>
    <string name="credencialesBorradas" translatable="false">Credenciales borradas</string>

    <string name="ordenar" translatable="false">Ordenar:</string>

    <string name="nuevoProducto">Nuevo Producto</string>
    <string name="producto">Producto:</string>
    <string name="nombreProductoPlaceholder">Nombre de producto…</string>
    <string name="categoria">Categoría:</string>
    <string name="sinCategoria">Sin categoría</string>
    <string name="cantidad">Cantidad:</string>
    <string name="unidad">Unidad:</string>
    <string-array name="unidades">
        <item name="unidad">unidad</item>
        <item name="">kg</item>
        <item name="">g</item>
        <item name="">L</item>
        <item name="">ml</item>
    </string-array>
    <string name="fechaCaducidad">Fecha de caducidad:</string>
    <string name="fechaPlaceholder">22/06/2024</string>
    <string name="anadirAutomaticamente">Añadir automáticamente a la lista de compra:</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cantidadMinima">Cantidad mínima:</string>
    <string name="tiendaProcedente">Tienda procedente:</string>
    <string name="nombreTiendaPlaceholder">Nombre de tienda…</string>
    <string name="aceptar">Aceptar</string>
    <string name="anadirALaListaCompra">Añadir a la lista de compra</string>
    <string name="cancelar">Cancelar</string>
    <string name="spinnerPrompt">Elige la categoría…</string>
    <string name="eliminar">Eliminar</string>
    <string name="mensajeConfirmacionBorradoProducto">"¿Estás seguro/a de que quieres eliminar el producto: "</string>
    <string name="alta_producto_despensa_titulo">Nuevo Producto</string>
    <string name="modificacion_producto_despensa_titulo">Modificación</string>
    <string name="toast_falta_credenciales" tools:ignore="ExtraTranslation">Por favor, introduce usuario y contraseña</string>
    <string name="internet_permission_denied" tools:ignore="ExtraTranslation">Acceso a internet no permitido</string>
    <string name="operacion_no_realizada" tools:ignore="ExtraTranslation">Error: la operación no se ha realizado.</string>
    <string name="operacion_realizada" tools:ignore="ExtraTranslation">La operación se ha realizado correctamente.</string>
    <string name="toast_falta_nombre_producto" tools:ignore="ExtraTranslation">Introduce el nombre y la cantidad del producto.</string>
    <string name="toast_falta_nombre_categoria_producto" tools:ignore="ExtraTranslation">Introduce el nombre, la cantidad y la cantidad mínima del producto y selecciona la categoría.</string>
</resources>